# swipl-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: atom.rs  functor.rs  lib.rs
swipl-sys/: Cargo.toml  build.rs
swipl-sys/src/: lib.rs
