[workspace]
members = ["swipl-sys"]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "Bindings to SWI Prolog."
homepage = "https://github.com/remexre/swipl-rs"
license = "Apache-2.0/MIT"
name = "swipl"
repository = "https://github.com/remexre/swipl-rs"
version = "0.1.0"

[badges]
travis-ci = { repository = "remexre/swipl-rs" }

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
swipl-sys = { path = "swipl-sys", version = "0.2.0" }
lazy_static = "1.0.0"
