[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
build = "build.rs"
description = "Low-level bindings to SWI Prolog"
homepage = "https://github.com/remexre/swipl-rs"
license = "Apache-2.0/MIT"
name = "swipl-sys"
repository = "https://github.com/remexre/swipl-rs"
version = "0.2.0"

[dependencies]
gmp-mpfr-sys = "1.1.0"
ncurses = "5.91.0"

[build-dependencies]
bindgen = "0.33.1"
flate2 = "1.0.1"
hashwriter = "0.1.0"
reqwest = "0.8.5"
sha2 = "0.7.0"
tar = "0.4.14"
